--- a/mnemonic/src/styles.scss
+++ b/mnemonic/src/styles.scss
@@ -27,7 +27,7 @@
   --button-border-color: #bb86fc;
   --button-bg-color: #121212;
   --button-text-color: #bb86fc;
-  --tile-hover-bg: #424242;
+  --tile-hover-bg: #4f4f4f;
   --tile-selected-bg: #0277bd;
   --tile-selected-border: #01579b;
   --tile-correct-selected-bg: #2e7d32;
